fix thread title alignment

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -210,9 +210,6 @@
 				padding-right: 5px;
 			}
 		}
-		#close-thread:hover {
-			// background: @app-background-color-hover;
-		}
 
 		.new-messages-below {
 			cursor: pointer;
